# batterybar

./: .gitignore  Cargo.toml  README.md  build-and-install.sh  build.sh  com.github.blandinw.batterybar.plist  install.sh  release-to-github.sh  uninstall.sh
src/: main.rs
